@@ -3,6 +3,10 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+7/23/24: Fixed crash aligning to grid map already loaded without pieces
+aligned and fixed probable source of crash resuming multigrid; added autosave
+of multigrid session file when there are unsaved changes.
+
 7/16/24: Made OpenNewMontage clear out list of pieces to skip (In 4.1).
 
 7/15/24: SEM_4-2-0beta10
